# i3stat

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Cross.toml  IDEAS.md  README.md  crash-new-arch  justfile  rustfmt.toml  sample_config.toml  sample_included_config.toml
.github/workflows/: release.yml  rust.yml  verify.yml
cross/: aarch64-unknown-linux-gnu.Dockerfile  x86_64-unknown-linux-gnu.Dockerfile
scripts/: i3.conf  ipc.sh  run-with-click.sh  sensors.rs
scripts/node/: consts.ts  dev.ts  package.json
scripts/run/: index.ts  package.json
src/: bar.rs  cli.rs  config.rs  context.rs  dbus.rs  dispatcher.rs  exec.rs  format.rs  human_time.rs  i3.rs  ipc.rs  item.rs  lib.rs  macros.rs  main.rs  net.rs  signals.rs  test_utils.rs  theme.rs
src/bar_items/: README.md  battery.rs  cpu.rs  disk.rs  dunst.rs  kbd.rs  krb.rs  light.rs  mako.rs  mem.rs  mod.rs  net_usage.rs  nic.rs  script.rs  sensors.rs  time.rs  tuxedo.rs
src/bar_items/dunst/: generated.rs  mod.rs
src/bar_items/nic/: filter.rs  mod.rs
src/bar_items/pulse/: audio.rs  custom.rs  mod.rs  pulse_tokio.rs  structs.rs
src/config/: item.rs  mod.rs  parse.rs  user.rs
src/dbus/: dunst.rs  mako.rs  mod.rs  network_manager.rs  notifications.rs  tuxedo.rs
src/human_time/: mod.rs  option.rs
src/i3/: bar_item.rs  click.rs  header.rs  ipc.rs  mod.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/item/: battery.rs  cpu.rs  disk.rs  mem.rs  mod.rs  net_usage.rs  nic.rs  script.rs  sensors.rs  time.rs
src/item/dunst/: generated.rs  mod.rs
src/util/: cell.rs  enum_cycle.rs  exec.rs  format.rs  mod.rs  net.rs  paginator.rs  path.rs  urgent.rs  vec.rs
src/util/net/: filter.rs  interface.rs  mod.rs
src/util/netlink/: acpi.rs  ffi.rs  mod.rs  route.rs
src/util/netlink/acpi/: ffi.rs  mod.rs
src/util/netlink/nl80211/: enums.rs  mod.rs
tests/: mod.rs  util.rs
tests/fs-hook/: Cargo.toml
tests/fs-hook/src/: lib.rs
tests/i3/: check.rs  i3_clicks.rs  mod.rs  screenshots.rs  util.rs
tests/spawn/: actions.rs  ipc.rs  item_krb.rs  item_raw.rs  item_script.rs  item_time.rs  mod.rs  util.rs
