[package]
name = "istat"
version = "0.6.0"
edition = "2021"
description = "A lightweight and batteries-included status_command for i3 and sway"
license = "GPL-3.0-only"
homepage = "https://github.com/acheronfail/istat"
repository = "https://github.com/acheronfail/istat"
keywords = ["i3", "sway", "status_command", "istat", "status"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "istat-acpi"
path = "bin/acpi.rs"

[[bin]]
name = "istat-ipc"
path = "bin/ipc.rs"

[[bin]]
name = "istat-sensors"
path = "bin/sensors.rs"

[[bin]]
name = "istat-signals"
path = "bin/signals.rs"

[dependencies]
async-trait = "0.1.68"
bytesize = { version = "1.2.0", features = ["serde"] }
chrono = "0.4.24"
clap = { version = "4.2.7", features = ["derive"] }
dirs = "5.0.1"
figment = { version = "0.10.10", features = ["toml", "yaml", "json"] }
futures = "0.3.28"
hex_color = { version = "2.0.0", features = ["serde"] }
hound = "3.5.0"
humantime-serde = "1.1.1"
indexmap = { version = "1.9.3", features = ["serde"] }
libc = "0.2.142"
libpulse-binding = { version = "2.27.1", features = ["pa_v14"] }
libpulse-tokio = "0.1.0"
log = "0.4.17"
# FIXME: use crate version once it's published
neli = { git = "https://github.com/jbaublitz/neli", branch = "v0.7.0-rc2", features = ["tokio", "async"] }
nix = { version = "0.26.2", features = ["net"] }
num-traits = "0.2.15"
paste = "1.0.12"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.160", features = ["rc"] }
serde_derive = "1.0.160"
serde_json = "1.0.96"
serde_repr = "0.1.12"
signal-hook = "0.3.15"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
strum = { version = "0.24.1", features = ["derive"] }
sysinfo = { version = "0.28.4", default-features = false }
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.8"
wordexp = "0.1.0"
zbus = { version = "3.13.1", default-features = false, features = ["tokio"] }

[[test]]
name = "integration"
path = "tests/mod.rs"

[dev-dependencies]
automod = "1.0.8"
clap_mangen = "0.2.11"
clap = { version = "4.2.7", features = ["derive"] }
fakeroot = "0.4.1"
rand = "0.8.5"
timeout-readwrite = "0.3.3"
xcb = { version = "1.2.1", features = ["xkb", "xtest"] }
x11 = { version = "2.21.0", features = ["xlib"] }

[profile.release]
# Reducing binary size. Read the git commit with this change for detailed savings.
# See: https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1
panic = "abort"
