[package]
name = "i3stat"
version = "0.14.0"
edition = "2021"
authors = ["acheronfail <acheronfail@gmail.com>"]
description = "A lightweight and batteries-included status_command for i3 and sway"
license = "GPL-3.0-only"
homepage = "https://github.com/acheronfail/i3stat"
repository = "https://github.com/acheronfail/i3stat"
keywords = ["i3", "sway", "status_command", "i3stat", "status"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "i3stat-net"
path = "bin/net.rs"

[[bin]]
name = "i3stat-acpi"
path = "bin/acpi.rs"

[[bin]]
name = "i3stat-ipc"
path = "bin/ipc.rs"

[[bin]]
name = "i3stat-sensors"
path = "bin/sensors.rs"

[[bin]]
name = "i3stat-signals"
path = "bin/signals.rs"

[dependencies]
async-trait = "0.1.80"
bytesize = { version = "1.3.0", features = ["serde"] }
chrono = "0.4.39"
clap = { version = "4.2.7", features = ["derive"] }
dirs = "6.0.0"
figment = { version = "0.10.19", features = ["toml", "yaml", "json"] }
futures = "0.3.29"
hex_color = { version = "3.0.0", features = ["serde"] }
hound = "3.5.1"
humantime-serde = "1.1.1"
indexmap = { version = "2.7.1", features = ["serde"] }
libc = "0.2.169"
libpulse-binding = { version = "2.28.2", features = ["pa_v14"] }
libpulse-tokio = "0.1.1"
log = "0.4.25"
neli = { version = "0.7.1", features = ["tokio", "async"] }
nix = { version = "0.29.0", features = ["net"] }
num-traits = "0.2.19"
paste = "1.0.15"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.217", features = ["rc"] }
serde_derive = "1.0.217"
serde_json = "1.0.138"
serde_repr = "0.1.19"
signal-hook = "0.3.17"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
strum = { version = "0.26.3", features = ["derive"] }
sysinfo = { version = "0.33.1", default-features = false, features = ["component", "disk", "network", "system"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = "0.7.13"
wordexp = "0.1.0"
zbus = { version = "5.3.1", default-features = false, features = ["tokio"] }

[[test]]
name = "integration"
path = "tests/mod.rs"

[dev-dependencies]
automod = "1.0.14"
clap = { version = "4.2.7", features = ["derive"] }
clap_mangen = "0.2.26"
fakeroot = "0.4.1"
rand = "0.9.0"
timeout-readwrite = "0.4.0"
xcb = { version = "1.5.0", features = ["xkb", "xtest"] }
x11 = { version = "2.21.0", features = ["xlib"] }

[profile.release]
# Reducing binary size. Read the git commit with this change for detailed savings.
# See: https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1
panic = "abort"
